*renderdoc-1.12 (21 Feb 2021)

  21 Feb 2021; AzP <peterasplund@gentoo.se> +renderdoc-1.12.ebuild,
  -renderdoc-1.11.ebuild:
  dev-util/renderdoc:   Version bump to v1.12. Removal of broken v1.11. Add
  calls to update mime-databases, et al.  Signed-off-by: Peter Asplund
  <peter.azp@gmail.com>

*renderdoc-1.11 (20 Feb 2021)

  20 Feb 2021; AzP <peterasplund@gentoo.se> +renderdoc-1.11.ebuild,
  -renderdoc-1.5-r1.ebuild, -renderdoc-1.8.ebuild, -renderdoc-1.9.ebuild,
  renderdoc-9999.ebuild:
  dev-util/renderdoc:       Version bump to v1.11. Currently failing to build.
  Signed-off-by: Peter Asplund <peter.azp@gmail.com>

*renderdoc-1.10 (17 Oct 2020)

  17 Oct 2020; AzP <peterasplund@gentoo.se> +renderdoc-1.10.ebuild:
  dev-util/renderdoc:   Version bump to v1.10. Port ebuild to cmake.eclass.

*renderdoc-1.9 (17 Oct 2020)

  17 Oct 2020; AzP <peterasplund@gentoo.se> +renderdoc-1.9.ebuild:
  dev-util/renderdoc:   Version bump to v1.9.

*renderdoc-1.5-r1 (23 May 2020)
*renderdoc-1.8 (23 May 2020)

  23 May 2020; AzP <peterasplund@gentoo.se> +renderdoc-1.5-r1.ebuild,
  +renderdoc-1.8.ebuild, -renderdoc-1.2.ebuild, -renderdoc-1.5.ebuild,
  renderdoc-9999.ebuild:
  dev-util/renderdoc: Update supported python version and swig

*renderdoc-1.5 (15 Dec 2019)

  15 Dec 2019; AzP <peterasplund@gentoo.se> +renderdoc-1.5.ebuild:
  dev-util/renderdoc:   Bump version to 1.5  Signed-off-by: Peter Asplund
  <peter.azp@gmail.com>

  29 Jan 2019; AzP <peterasplund@gentoo.se> renderdoc-1.2.ebuild:
  dev-util/renderdoc:   Bump RenderDoc version to 1.2  Signed-off-by: Peter
  Asplund <peter.azp@gmail.com> Package-Manager: Portage-2.3.59, Repoman-2.3.12

*renderdoc-1.2 (28 Jan 2019)

  28 Jan 2019; AzP <peterasplund@gentoo.se> +renderdoc-1.2.ebuild:
  dev-util/renderdoc:   Bump RenderDoc version to 1.2      Signed-off-by: Peter
  Asplund <peter.azp@gmail.com>

*renderdoc-1.1 (27 Nov 2018)

  27 Nov 2018; AzP <peterasplund@gentoo.se> +renderdoc-1.1.ebuild,